Added a portfolio Website

--- a/index.html
+++ b/index.html
@@ -3,17 +3,165 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/portfolio.css">
     <title>Web Developer Portfolio</title>
 </head>
-<body>
-    <header>
+<body class="open-sans-title ">
+    <header class="header secondary-bg">
+        <nav>
+            <h2 class="nav-title"><span class="text-pr">M</span>d. <span class="text-pr">A</span>bu <span class="text-pr">S</span>aleh <span class="text-pr">N</span>oor</h2>
+            <ul>
+                <li><a class="darktoo" href="">Portfolio</a></li>
+                <li><a class="darktoo" href="">Blog</a></li>
+           <li><a href=""><button class="btn"> Hire Me</button></a></li>
+            </ul>
+        </nav>
+        <div class="banner">
+            <div class="banner-title">
+                <h3 class="banner-greetings darktoo">Hi, I  am</h3>
+                <h1 class="banner-heading">Abu Saleh </h1>
 
+                <p class="banner-.description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <button  class="banner-btn" > <a href="Download">Download CV</a> </button>
+                <button class="btn"> <a href="Download">Contact</a></button>
+            </div>
+            <img class="banner-photo" src="images/434281422_876585810904684_6222849819576536606_n-removebg-preview.png" alt="Abu Saleh's Photo">
+           
+        </div>
     </header>
     <main>
-
-    </main>
-    <footer>
+        <section class="about-me secondary-bg">
         
+            <h2 class="about-head">About Me</h2>
+            <p class="about-description">I, m a developer with a passion for web development. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+        <div class="about-items">
+            <div class="about-item">
+                <p class="item-title">Name:</p>
+                <p class="item-description">Abu Saleh Noor</p>
+            </div>
+            <div class="about-item">
+                <p class="item-title">Email:</p>
+                <p class="item-description">abusalehnoor4103@gmail.com</p>
+            </div>
+            <div class="about-item">
+                <p class="item-title">Date of birth:</p>
+                <p class="item-description">25 July 2006</p>
+            </div>
+            <div class="about-item">
+                <p class="item-title">From:</p>
+                <p class="item-description">Pabna,Dhaka,Bangladesh</p>
+
+            </div>
+        </div>
+    </section>
+    <section class="skils">
+        <h2 class="about-head">What I do</h2>
+        <p class="about-description">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+        <div class="skills-container">
+            <!-- .skill*4>img+h4.skill-title+p.skill-description -->
+            <div class="skill">
+                <img src="images/icons/js.png" alt="JAvascript PNG">
+                <h4 class="skill-title">Vanilla JavaScript</h4>
+                <p class="skill-description">I am taking a course on Programming Hero to learn javascript.
+                    In Sha Allah! I can become a front end developer within next 6 months. Please pray for me</p>
+            </div>
+            <div class="skill">
+                <img src="images/icons/react.png" alt="React PNG">
+                <h4 class="skill-title">React</h4>
+                <p class="skill-description">I am taking a course on Programming Hero to learn React.
+                    In Sha Allah! I can become a front end developer within next 6 months. Please pray for me</p>
+            </div>
+            <div class="skill">
+                <img src="images/icons/nodejs.png" alt="Node.js PNG">
+                <h4 class="skill-title">Node.js</h4>
+                <p class="skill-description">I am taking a course on Programming Hero to learn Node.js.
+                    In Sha Allah! I can become a front end developer within next 6 months. Please pray for me</p>
+            </div>
+            <div class="skill">
+                <img src="images/icons/mongo.png" alt="MongoDB PNG">
+                <h4 class="skill-title">MongoDB</h4>
+                <p class="skill-description">I am taking a course on Programming Hero to learn MongoDB.
+                    In Sha Allah! I can become a front end developer within next 6 months. Please pray for me</p>
+            </div>
+        </div>
+    </section>
+    <section class="resume">
+        <h2 class="skill-title">A summary of My Resume</h2>
+       <div class="resume-container">
+        <!-- .resume-column*2>h2.resume-column-title+.experience*3>h4.experience-title+h5.experience-sub-title+.experience-description -->
+        <div class="resume-column">
+            <h2 class="resume-column-title">My Education</h2>
+            <div class="experience">
+                <h4 class="experience-title">Dakhil Pass From Madrasah Board</h4>
+                <h5 class="experience-sub-title">Pabna Islamia Madrasah/218-2024</h5>
+                <div class="experience-description"><p>Iam studied at Pabna Islamia Madrasah from 2018 to 2024.I pass my dakhil examination in 2024 with a great result GPA 5.After compliting my Dakhil Iam started learning Programmming on Programming Hero Complete Web Development Course Batch 10.</p> </div>
+            </div>
+            <hr>
+            <div class="experience">
+                <h4 class="experience-title">Front End Web Development</h4>
+                <h5 class="experience-sub-title">Programming Hero/30-6-2024to31-12-2024</h5>
+                <div class="experience-description"><p>
+                    Iam addmitted on Programming Hero Complete Web Development Course For Increasing My Knowledge about web development an programming.
+                </p></div>
+            </div>
+            <hr>
+            <div class="experience">
+                <h4 class="experience-title">Learning A business</h4>
+                <h5 class="experience-sub-title">My own Business/2021 to 2024</h5>
+                <div class="experience-description"><p>List skill/technologies here. You can change the icon above 
+                    to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p></div>
+            </div>
+        </div>
+        <div class="resume-column">
+            <h2 class="resume-column-title">My Experience</h2>
+            <div class="experience">
+                <h4 class="experience-title">Jr Front End Developer </h4>
+                <h5 class="experience-sub-title">Programming Hero /2024-2024</h5>
+                <div class="experience-description">I am taking a Intern on Programming Hero as a jr front end developer.
+                    In Sha Allah! I can become a front end developer within next 6 months. Please pray for me</div>
+            </div>
+            <hr>
+            <div class="experience">
+                <h4 class="experience-title">HTML Developer</h4>
+                <h5 class="experience-sub-title">ASN IT Limited/2024-present</h5>
+                <div class="experience-description">I am a HTML Developetr on ASN IT Limited
+                    In Sha Allah! I can become a front end developer within next 6 months. Please pray for me</div>
+            </div>
+            <hr>
+            <div class="experience">
+                <h4 class="experience-title">CSS Developer</h4>
+                <h5 class="experience-sub-title">ASN IT Limited</h5>
+                <div class="experience-description">I am a CSS Developer on ASN IT Limited .
+                    In Sha Allah! I can become a front end developer within next 6 months. Please pray for me</div>
+            </div>
+        </div>
+       </div>
+       <div class="button-center">
+        <button class="button" >Download CV</button></div>
+    </section>
+    </main>
+    <footer class="secondary-bg">
+        <div class="footer-column">
+            <h2 class="foot-head">Let's Connect</h2>
+            <p class="foot-description">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+            <div>
+                <a href="https://www.facebook.com/mdabusalehnoor9"><img src="images/icons/facebook.png" alt="FAcebook PNG"></a>
+                <a href="https://www.instagram.com/mdabusalehnoor9/"><img src="images/icons/insta.png" alt="Instagram PNG"></a>
+                <a href=""><img src="images/icons/twitter.png" alt="Twitter PNG"></a>
+            </div>
+        </div>
+
+        <div class="footer-column">
+            <h2 class="foot-head">Let's Inbox Me</h2>
+            <input type="text" placeholder="Your Name" ><br><br>
+            <input type="email" name="" id="" placeholder="Your Email">
+            <textarea name="" id="" cols="50" rows="30" placeholder="Message"></textarea>
+            <input  class="button" type="submit" Value="Submit">
+        </div>
+
     </footer>
 </body>
 </html>
