Added some font awesome icon

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/portfolio.css">
+    <script src="https://kit.fontawesome.com/57f1da92a6.js" crossorigin="anonymous"></script>
     <title>Web Developer Portfolio</title>
 </head>
 <body class="open-sans-title ">
@@ -25,8 +26,8 @@
                 <h1 class="banner-heading">Abu Saleh </h1>
 
                 <p class="banner-.description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-                <button  class="banner-btn" > <a href="Download">Download CV</a> </button>
-                <button class="btn"> <a href="Download">Contact</a></button>
+                <button  class="banner-btn" > <a href="Download"> <i class="fa-solid fa-download"></i> Download CV</a> </button>
+                <button class="btn"> <a href="Download"><i class="fa-solid fa-phone"></i> Contact</a></button>
             </div>
             <img class="banner-photo" src="images/434281422_876585810904684_6222849819576536606_n-removebg-preview.png" alt="Abu Saleh's Photo">
            
@@ -140,7 +141,7 @@
         </div>
        </div>
        <div class="button-center">
-        <button class="button" >Download CV</button></div>
+        <button class="button" > <i class="fa-solid fa-download"></i> Download CV</button></div>
     </section>
     </main>
     <footer class="secondary-bg">
@@ -148,9 +149,9 @@
             <h2 class="foot-head">Let's Connect</h2>
             <p class="foot-description">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
             <div>
-                <a href="https://www.facebook.com/mdabusalehnoor9"><img src="images/icons/facebook.png" alt="FAcebook PNG"></a>
-                <a href="https://www.instagram.com/mdabusalehnoor9/"><img src="images/icons/insta.png" alt="Instagram PNG"></a>
-                <a href=""><img src="images/icons/twitter.png" alt="Twitter PNG"></a>
+                <a href="https://www.facebook.com/mdabusalehnoor9" target="_blank"><img src="images/icons/facebook.png" alt="FAcebook PNG"></a>
+                <a href="https://www.instagram.com/mdabusalehnoor9/" target="_blank"><img src="images/icons/insta.png" alt="Instagram PNG"></a>
+                <a href="" target="_blank"><img src="images/icons/twitter.png" alt="Twitter PNG"></a>
             </div>
         </div>
 
